--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,10 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -186,10 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -212,22 +206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/207286/anaconda3/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:15: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
-      "  from ipykernel import kernelapp as app\n"
+      "TensorFlow Version: 1.1.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -281,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -433,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -569,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -728,16 +715,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = 1\n",
+    "epochs = 30\n",
     "# Batch Size\n",
-    "batch_size = 128\n",
+    "batch_size = 512\n",
     "# RNN Size\n",
     "rnn_size = 128\n",
     "# Number of Layers\n",
@@ -762,10 +747,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -828,10 +811,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -878,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -887,25 +868,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch  100/1077 - Train Accuracy: 0.4426, Validation Accuracy: 0.4847, Loss: 2.4646\n",
-      "Epoch   0 Batch  200/1077 - Train Accuracy: 0.4172, Validation Accuracy: 0.4656, Loss: 1.7791\n",
-      "Epoch   0 Batch  300/1077 - Train Accuracy: 0.4030, Validation Accuracy: 0.4680, Loss: 1.4564\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-8b554ffa681f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m                  \u001b[0mtarget_sequence_length\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtargets_lengths\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m                  \u001b[0msource_sequence_length\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msources_lengths\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m                  keep_prob: keep_probability})\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    776\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    777\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 778\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    779\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    780\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    980\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    981\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 982\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    983\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    984\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1030\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1031\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1032\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1033\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1034\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1037\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1038\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1039\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1040\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1041\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1019\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1020\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1022\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch   0 Batch  100/269 - Train Accuracy: 0.4805, Validation Accuracy: 0.4896, Loss: 2.2779\n",
+      "Epoch   0 Batch  200/269 - Train Accuracy: 0.4607, Validation Accuracy: 0.5062, Loss: 1.6659\n",
+      "Epoch   1 Batch  100/269 - Train Accuracy: 0.5593, Validation Accuracy: 0.5664, Loss: 0.9681\n",
+      "Epoch   1 Batch  200/269 - Train Accuracy: 0.5654, Validation Accuracy: 0.5898, Loss: 0.8484\n",
+      "Epoch   2 Batch  100/269 - Train Accuracy: 0.6512, Validation Accuracy: 0.6420, Loss: 0.6643\n",
+      "Epoch   2 Batch  200/269 - Train Accuracy: 0.6252, Validation Accuracy: 0.6585, Loss: 0.6243\n",
+      "Epoch   3 Batch  100/269 - Train Accuracy: 0.7116, Validation Accuracy: 0.7085, Loss: 0.4870\n",
+      "Epoch   3 Batch  200/269 - Train Accuracy: 0.6943, Validation Accuracy: 0.7259, Loss: 0.4571\n",
+      "Epoch   4 Batch  100/269 - Train Accuracy: 0.7698, Validation Accuracy: 0.7556, Loss: 0.3604\n",
+      "Epoch   4 Batch  200/269 - Train Accuracy: 0.7585, Validation Accuracy: 0.7719, Loss: 0.3383\n",
+      "Epoch   5 Batch  100/269 - Train Accuracy: 0.8534, Validation Accuracy: 0.8317, Loss: 0.2513\n",
+      "Epoch   5 Batch  200/269 - Train Accuracy: 0.8479, Validation Accuracy: 0.8567, Loss: 0.2289\n",
+      "Epoch   6 Batch  100/269 - Train Accuracy: 0.8975, Validation Accuracy: 0.8970, Loss: 0.1718\n",
+      "Epoch   6 Batch  200/269 - Train Accuracy: 0.8918, Validation Accuracy: 0.9027, Loss: 0.1518\n",
+      "Epoch   7 Batch  100/269 - Train Accuracy: 0.9161, Validation Accuracy: 0.9090, Loss: 0.1153\n",
+      "Epoch   7 Batch  200/269 - Train Accuracy: 0.9047, Validation Accuracy: 0.9142, Loss: 0.1106\n",
+      "Epoch   8 Batch  100/269 - Train Accuracy: 0.9249, Validation Accuracy: 0.9173, Loss: 0.0882\n",
+      "Epoch   8 Batch  200/269 - Train Accuracy: 0.9212, Validation Accuracy: 0.9227, Loss: 0.0819\n",
+      "Epoch   9 Batch  100/269 - Train Accuracy: 0.9309, Validation Accuracy: 0.9291, Loss: 0.0710\n",
+      "Epoch   9 Batch  200/269 - Train Accuracy: 0.9353, Validation Accuracy: 0.9284, Loss: 0.0674\n",
+      "Epoch  10 Batch  100/269 - Train Accuracy: 0.9422, Validation Accuracy: 0.9355, Loss: 0.0621\n",
+      "Epoch  10 Batch  200/269 - Train Accuracy: 0.9391, Validation Accuracy: 0.9445, Loss: 0.0561\n",
+      "Epoch  11 Batch  100/269 - Train Accuracy: 0.9511, Validation Accuracy: 0.9461, Loss: 0.0524\n",
+      "Epoch  11 Batch  200/269 - Train Accuracy: 0.9425, Validation Accuracy: 0.9406, Loss: 0.0508\n",
+      "Epoch  12 Batch  100/269 - Train Accuracy: 0.9495, Validation Accuracy: 0.9510, Loss: 0.0469\n",
+      "Epoch  12 Batch  200/269 - Train Accuracy: 0.9509, Validation Accuracy: 0.9593, Loss: 0.0445\n",
+      "Epoch  13 Batch  100/269 - Train Accuracy: 0.9534, Validation Accuracy: 0.9586, Loss: 0.0397\n",
+      "Epoch  13 Batch  200/269 - Train Accuracy: 0.9558, Validation Accuracy: 0.9593, Loss: 0.0380\n",
+      "Epoch  14 Batch  100/269 - Train Accuracy: 0.9592, Validation Accuracy: 0.9622, Loss: 0.0379\n",
+      "Epoch  14 Batch  200/269 - Train Accuracy: 0.9646, Validation Accuracy: 0.9623, Loss: 0.0365\n",
+      "Epoch  15 Batch  100/269 - Train Accuracy: 0.9617, Validation Accuracy: 0.9580, Loss: 0.0363\n",
+      "Epoch  15 Batch  200/269 - Train Accuracy: 0.9677, Validation Accuracy: 0.9683, Loss: 0.0309\n",
+      "Epoch  16 Batch  100/269 - Train Accuracy: 0.9683, Validation Accuracy: 0.9666, Loss: 0.0314\n",
+      "Epoch  16 Batch  200/269 - Train Accuracy: 0.9723, Validation Accuracy: 0.9664, Loss: 0.0278\n",
+      "Epoch  17 Batch  100/269 - Train Accuracy: 0.9717, Validation Accuracy: 0.9698, Loss: 0.0291\n",
+      "Epoch  17 Batch  200/269 - Train Accuracy: 0.9707, Validation Accuracy: 0.9736, Loss: 0.0250\n",
+      "Epoch  18 Batch  100/269 - Train Accuracy: 0.9743, Validation Accuracy: 0.9737, Loss: 0.0257\n",
+      "Epoch  18 Batch  200/269 - Train Accuracy: 0.9750, Validation Accuracy: 0.9689, Loss: 0.0236\n",
+      "Epoch  19 Batch  100/269 - Train Accuracy: 0.9748, Validation Accuracy: 0.9719, Loss: 0.0243\n",
+      "Epoch  19 Batch  200/269 - Train Accuracy: 0.9812, Validation Accuracy: 0.9714, Loss: 0.0232\n",
+      "Epoch  20 Batch  100/269 - Train Accuracy: 0.9754, Validation Accuracy: 0.9758, Loss: 0.0239\n",
+      "Epoch  20 Batch  200/269 - Train Accuracy: 0.9757, Validation Accuracy: 0.9741, Loss: 0.0203\n",
+      "Epoch  21 Batch  100/269 - Train Accuracy: 0.9768, Validation Accuracy: 0.9783, Loss: 0.0221\n",
+      "Epoch  21 Batch  200/269 - Train Accuracy: 0.9835, Validation Accuracy: 0.9751, Loss: 0.0189\n",
+      "Epoch  22 Batch  100/269 - Train Accuracy: 0.9751, Validation Accuracy: 0.9749, Loss: 0.0188\n",
+      "Epoch  22 Batch  200/269 - Train Accuracy: 0.9839, Validation Accuracy: 0.9749, Loss: 0.0183\n",
+      "Epoch  23 Batch  100/269 - Train Accuracy: 0.9766, Validation Accuracy: 0.9752, Loss: 0.0189\n",
+      "Epoch  23 Batch  200/269 - Train Accuracy: 0.9819, Validation Accuracy: 0.9783, Loss: 0.0164\n",
+      "Epoch  24 Batch  100/269 - Train Accuracy: 0.9784, Validation Accuracy: 0.9784, Loss: 0.0170\n",
+      "Epoch  24 Batch  200/269 - Train Accuracy: 0.9841, Validation Accuracy: 0.9768, Loss: 0.0148\n",
+      "Epoch  25 Batch  100/269 - Train Accuracy: 0.9804, Validation Accuracy: 0.9792, Loss: 0.0170\n",
+      "Epoch  25 Batch  200/269 - Train Accuracy: 0.9854, Validation Accuracy: 0.9801, Loss: 0.0145\n",
+      "Epoch  26 Batch  100/269 - Train Accuracy: 0.9828, Validation Accuracy: 0.9770, Loss: 0.0163\n",
+      "Epoch  26 Batch  200/269 - Train Accuracy: 0.9902, Validation Accuracy: 0.9775, Loss: 0.0135\n",
+      "Epoch  27 Batch  100/269 - Train Accuracy: 0.9818, Validation Accuracy: 0.9814, Loss: 0.0157\n",
+      "Epoch  27 Batch  200/269 - Train Accuracy: 0.9883, Validation Accuracy: 0.9793, Loss: 0.0129\n",
+      "Epoch  28 Batch  100/269 - Train Accuracy: 0.9785, Validation Accuracy: 0.9768, Loss: 0.0159\n",
+      "Epoch  28 Batch  200/269 - Train Accuracy: 0.9821, Validation Accuracy: 0.9802, Loss: 0.0120\n",
+      "Epoch  29 Batch  100/269 - Train Accuracy: 0.9828, Validation Accuracy: 0.9801, Loss: 0.0166\n",
+      "Epoch  29 Batch  200/269 - Train Accuracy: 0.9886, Validation Accuracy: 0.9802, Loss: 0.0125\n",
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -1001,10 +1024,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1023,10 +1044,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1055,11 +1074,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -1068,8 +1093,7 @@
     "    :param vocab_to_int: Dictionary to go from the words to an id\n",
     "    :return: List of word ids\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return [vocab_to_int[word] if word in vocab_to_int else vocab_to_int['<UNK>'] for word in sentence.lower().split()]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1088,11 +1112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from checkpoints/dev\n",
+      "Input\n",
+      "  Word Ids:      [71, 158, 166, 186, 17, 9, 164]\n",
+      "  English Words: ['he', 'saw', 'a', 'old', 'yellow', 'truck', '.']\n",
+      "\n",
+      "Prediction\n",
+      "  Word Ids:      [320, 65, 222, 207, 47, 136, 119, 153, 1]\n",
+      "  French Words: il a pas un vieux camion jaune . <EOS>\n"
+     ]
+    }
+   ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
     "\n",
@@ -1153,9 +1190,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (conda_tf)",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1167,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
